--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - ./logs:/home/hummingbot/logs
       - ./data:/home/hummingbot/data
       - ./scripts:/home/hummingbot/scripts
+      - ./certs:/home/hummingbot/certs
     logging:
       driver: "json-file"
       options:
@@ -32,16 +33,16 @@ services:
   #   ports:
   #     - "8501:8501"
 
-  # gateway:
-  #   container_name: gateway
-  #   image: hummingbot/gateway:latest
-  #   ports:
-  #     - "15888:15888"
-  #     - "8080:8080"
-  #   volumes:
-  #     - "./gateway_files/conf:/home/gateway/conf"
-  #     - "./gateway_files/logs:/home/gateway/logs"
-  #     - "./gateway_files/db:/home/gateway/db"
-  #     - "./certs:/home/gateway/certs"
-  #   environment:
-  #     - GATEWAY_PASSPHRASE=a
+  gateway:
+    container_name: gateway
+    image: vuonghuuhung/humming-bot-gateway
+    ports:
+      - "15888:15888"
+      - "8080:8080"
+    volumes:
+      - "./gateway_files/conf:/home/gateway/conf"
+      - "./gateway_files/logs:/home/gateway/logs"
+      - "./gateway_files/db:/home/gateway/db"
+      - "./certs:/home/gateway/certs"
+    environment:
+      - GATEWAY_PASSPHRASE=vuonghuuhung
